2010-02-12  Romain Francois <romain@r-enthusiasts.com>

	* src/RInside.h: RInside gains an operator[](string) to allow
	treating the RInside instance as a proxy to the global environment
	so that we can do: RInside R; R["x"] = 10 ; All the actual work
	is done by the Rcpp::Environment class

2010-02-04  Romain Francois <francoisromain@free.fr>

	* RInside::autoloads revisited with the new Rcpp api

	* RInside gains a default constructor to be used when there 
	is no command line arguments
	
2010-01-28  Romain Francois <francoisromain@free.fr>

	* src/RInside.{h,cpp}: Retire assign(vector<vector<double>> )
	because now this can be taken care of by template specialization
	
	* DESCRIPTION: require Rcpp 0.7.3.6

2010-01-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.{h,cpp}: Restore assign(vector<vector<double>>) which
	  is not (yet?) covered by the more general templated solution

	* src/RInside.h: Minor cleanup regarding logTxt usage

	* src/Makefile: Make sure we find Rcpp.h headers

2010-01-27  Romain Francois <francoisromain@free.fr>

	* src/RInside.{h,cpp}: include Rcpp.h and use the Rf_ prefixed R API
	functions. stop using macros from Rdefines because they don't
	work with R_NOREMAP

	* src/RInside.{h,cpp}: using the new Rcpp API assign becomes
	a template and let Rcpp::Environment.assign deal with the type
	of the object and how to wrap it. specializations of wrap
	for vector<vector<int>> and vector<vector<double>> are created
	to maintain original interface.

2010-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.2.1

	* src/RInside.cpp: Change startup so that interactive() comes out FALSE,
	  with that no longer call Rf_KillAllDevices(); as we may not have
	  had devices in the first place.

	* src/RInside.h: Logging helper protected by #ifndef as it is in Rcpp too

	* tools/unix2dos.r: Simple CRLF -> LF filter to nuke a Windows warning
	* src/Makefile.win: Employ unix2dos.r on two autogenerated files
